- Use two-line video/manga controls - Hide less controls in mobile - Disable PiP/speed when casting - Properly end PiP mode when casting - Move player title initialization from loadstart to ready, fixes full screen not showing the title when loading a Mega file - Better playback speed icons

--- a/websites/static/css/catalogue.css
+++ b/websites/static/css/catalogue.css
@@ -206,7 +206,7 @@
 
 .manga-reader.manga-reader-strip .swiper-pagination-custom {
 	width: 100dvh;
-	transform: translateX(calc(50% - 3.1rem)) rotate(90deg);
+	transform: translateX(calc(50% - 3rem)) rotate(90deg);
 	right: 0;
 	bottom: unset;
 	top: unset;
@@ -214,7 +214,8 @@
 }
 
 .manga-reader.manga-reader-strip .swiper-pagination-custom .manga-bar .vjs-control-bar {
-	padding-left: 6.5rem;
+	padding-left: 9rem;
+	padding-top: 6.1rem;
 }
 
 .manga-reader.manga-reader-strip .swiper-pagination-custom .manga-slider-bar {
@@ -228,6 +229,7 @@
 
 .manga-reader.manga-reader-strip .manga-bar, .manga-reader.manga-reader-strip .vjs-control-bar {
 	background: linear-gradient(to bottom, rgba(var(--always-negative-color),1) 0%, rgba(var(--always-negative-color),0) 100%);
+	height: 13.5rem !important;
 }
 
 .manga-reader-rtl .video-js .vjs-play-progress:before {
@@ -244,7 +246,11 @@
 }
 
 .manga-reader .video-js.vjs-fullscreen {
-	height: 7.5rem !important;
+	height: 9rem !important;
+}
+
+.manga-reader.manga-reader-strip .video-js.vjs-fullscreen {
+	height: 13.5rem !important;
 }
 
 .manga-bar {
@@ -252,7 +258,7 @@
 	visibility: visible;
 	opacity: 1;
 	width: 100%;
-	height: 7.5rem !important;
+	height: 9rem !important;
 	padding: 1.5rem;
 	font-size: 1rem;
 	transition: opacity .4s ease-in-out, transform .4s ease-in-out;
@@ -434,11 +440,12 @@ input[type='range'].manga-slider-bar::-moz-range-thumb {
 
 .video-js .vjs-control-bar {
 	background: transparent;
-	height: 5em;
+	height: 9rem;
 	padding: 1em;
 	font-size: 1.5em;
 	transition: opacity .4s ease-in-out, transform .4s ease-in-out;
 	background: linear-gradient(to bottom, rgba(var(--always-negative-color),0) 0%, rgba(var(--always-negative-color),1) 100%);
+	flex-wrap: wrap;
 }
 
 .player_extra_upper {
@@ -449,11 +456,12 @@ input[type='range'].manga-slider-bar::-moz-range-thumb {
 	left: 0;
 	display: flex;
 	width: 100%;
+	height: 9rem;
 	padding: 1.6rem;
 	z-index: 2000;
 	transition: opacity .4s ease-in-out, transform .4s ease-in-out;
 	pointer-events: none;
-	align-items: center;
+	align-items: start;
 	background: linear-gradient(to bottom, rgba(var(--always-negative-color),1) 0%, rgba(var(--always-negative-color),0) 100%);
 }
 
@@ -624,6 +632,7 @@ input[type='range'].manga-slider-bar::-moz-range-thumb {
 .video-js .vjs-progress-control .vjs-progress-holder, .video-js .vjs-volume-bar {
 	font-size: 1.6666666667em;
 	border-radius: 2em;
+	margin: 0;
 }
 
 .video-js .vjs-play-progress, .video-js .vjs-volume-level {
@@ -673,6 +682,15 @@ input[type='range'].manga-slider-bar::-moz-range-thumb {
 
 .video-js .vjs-current-time, .video-js .vjs-time-divider, .video-js .vjs-duration {
 	display: block;
+}
+
+.video-js .vjs-current-time {
+	margin-left: 0.5em !important;
+}
+
+.video-js .vjs-duration {
+	flex-grow: 1;
+	text-align: start;
 }
 
 .video-js .vjs-time-control {
@@ -807,7 +825,7 @@ input[type='range'].manga-slider-bar::-moz-range-thumb {
 	left: -3em !important;
 	bottom: 6em !important;
 	height: 6em !important;
-	background-color: rgba(var(--always-negative-color),0.4);
+	background-color: rgba(var(--always-negative-color),0.6);
 	border-radius: 0.2em;
 	pointer-events: none;
 }
@@ -894,8 +912,8 @@ input[type='range'].manga-slider-bar::-moz-range-thumb {
 	content: "\f24d"
 }
 
-.video-js.vjs-casting .vjs-picture-in-picture-control {
-	opacity: 0.5;
+.video-js.vjs-casting .vjs-picture-in-picture-control, .video-js.vjs-casting .vjs-play-speed-button {
+	display: none;
 }
 
 .video-js .vjs-chromecast-button .vjs-icon-placeholder:before {
@@ -938,8 +956,11 @@ input[type='range'].manga-slider-bar::-moz-range-thumb {
 }
 
 .video-js .vjs-progress-control {
-	margin-right: 0.4em;
+	margin-right: 0;
 	margin-left: 0;
+	order: -1;
+	flex-basis: 100%;
+	height: 1em;
 }
 
 .player_error_icon {
@@ -3223,17 +3244,21 @@ input:checked + .viewed-slider:before {
 		height: 1.1em;
 	}
 
-	.manga-reader.manga-reader-strip .swiper-pagination-custom {
-		transform: translateX(calc(50% - 1.55rem)) rotate(90deg);
+	.video-js .vjs-control-bar, .manga-bar, .player_extra_upper {
+		height: 6rem !important;
+	}
+
+	.manga-reader.manga-reader-strip .manga-bar, .manga-reader.manga-reader-strip .vjs-control-bar {
+		height: 6rem !important;
+	}
+
+	.manga-reader.manga-reader-strip .video-js.vjs-fullscreen {
+		height: 6rem !important;
 	}
 
 	.manga-reader.manga-reader-strip .swiper-pagination-custom .manga-bar .vjs-control-bar {
-		padding-left: 5rem;
-	}
-
-	.video-js .vjs-control {
-		margin-left: 0;
-		margin-right: 0;
+		padding-left: 6rem;
+		padding-top: 2.1rem;
 	}
 }
 
@@ -3264,10 +3289,6 @@ input:checked + .viewed-slider:before {
 
 	.recommendation .synopsis {
 		-webkit-line-clamp: 5;
-	}
-
-	.video-js .vjs-time-divider, .video-js .vjs-duration {
-		display: none;
 	}
 
 	.strip-images::-webkit-scrollbar {
